2008-12-29  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Described multiple emblem bug in detail, added sequence diagram to describe
	the interaction with StatusMonitor, modified debug statements and improved
	several comments.

2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Whoops, updated comment. I meant counterlog.

2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/data/icons/hicolor/scalable/actions/nautilussvn-async
	hronous.svg:
	Forgot to add emblem.

2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Added all the information I have in my head about the problems with 
	threading within a Nautilus Python extension including a debug callback
	demonstrating the problems.

2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* packages/ubuntu/debian/do-nautilussvn-restart-nautilus:
	* packages/ubuntu/debian/nautilussvn-restart-required.update-notifi
	er:
	* packages/ubuntu/debian/postinst:
	* packages/ubuntu/debian/postrm:
	* setup.py:
	Command needs to point to an executable (+x) shell script.

2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* packages/ubuntu/debian/postinst:
	Whoops, some leftover stuff from apt-file and some other errors.

2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* packages/ubuntu/debian/nautilussvn-restart-required.update-notifi
	er:
	* packages/ubuntu/debian/postinst:
	* packages/ubuntu/debian/postrm:
	* setup.py:
	Added an update notification to be displayed after installing.

2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	I think I understand the bug now invalidate_extension_info doesn't always
	lead to a update_file_info, but no idea why.

2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* setup.py: